[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/nodes/ScaleControls.gd" type="Script" id=1]

[node name="ScaleControls" type="HBoxContainer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -140.0
margin_top = 10.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="MinusScaleButton" type="Button" parent="."]
margin_right = 17.0
margin_bottom = 30.0
text = "-"

[node name="Label" type="Label" parent="."]
margin_left = 21.0
margin_top = 5.0
margin_right = 81.0
margin_bottom = 25.0
rect_min_size = Vector2( 60, 20 )
text = "100%"
align = 1
valign = 1

[node name="PlusScaleButton" type="Button" parent="."]
margin_left = 85.0
margin_right = 105.0
margin_bottom = 30.0
text = "+"

[connection signal="pressed" from="MinusScaleButton" to="." method="_on_MinusScaleButton_pressed"]
[connection signal="pressed" from="PlusScaleButton" to="." method="_on_PlusScaleButton_pressed"]
